...
              .testTag("TopBar"))
}

@Composable
@VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
fun BottomBar(navigationActions: NavigationActions) {
  BottomNavigationMenu(
      onTabSelect = { route -> navigationActions.navigateTo(route) },
      tabList = LIST_TOP_LEVEL_DESTINATION,
      selectedItem = navigationActions.currentRoute())
}

@Composable
...
@Composable
@VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
fun LetterList(learnedLetters: List<Char>) {
  val allLetters = ('A'..'Z').toList() // All capital letters from A to Z
  val scrollState = rememberScrollState()

  Row(modifier = Modifier.fillMaxWidth().horizontalScroll(scrollState).testTag("LettersList")) {
    allLetters.forEach { letter ->
      val isLearned = letter in learnedLetters
      Text(
          text = letter.toString(),
          fontSize = 24.sp,
          fontWeight = FontWeight.Bold,
...
 *
 * @param days A long value for the number of days (streak).
 */
@Composable
fun StreakCounter(days: Long) {
  Row(
      modifier = Modifier.testTag("StreakCounter"),
      verticalAlignment = Alignment.CenterVertically) {
        Icon(
            painter = painterResource(id = R.drawable.flame),
            contentDescription = "Streak Icon",
            tint = MaterialTheme.colorScheme.secondary,
            modifier = Modifier.size(32.dp).testTag("FlameIcon"))
        Spacer(modifier = Modifier.width(4.dp))
        Text(
            text = "$days",
            fontWeight = FontWeight.Bold,
            color = MaterialTheme.colorScheme.secondary,
            fontSize = 20.sp,
            modifier = Modifier.testTag("NumberOfDays"))
      }
}

/**
 * An image of a profile picture. If the URL is null, a default icon is displayed.
 *
...
        contentScale = ContentScale.Crop) // Crop the image to fit within the bounds
  } else {
    // Default placeholder for no image
    Icon(
        imageVector = Icons.Default.Person,
        contentDescription = "Default Profile Picture",
        modifier = Modifier.size(120.dp).testTag("DefaultProfilePicture"),
        tint = MaterialTheme.colorScheme.onBackground)
  }
}

/**
 * A recap of a user's account information.
...
 * @param profilePictureUrl A string for the profile picture URL.
 * @param streak The user's streak in days.
 */
@Composable
fun AccountInformation(userId: String, userName: String, profilePictureUrl: String?, streak: Long) {
  Row(
      modifier = Modifier.fillMaxWidth().testTag("UserInfo"),
      horizontalArrangement = Arrangement.SpaceBetween,
      verticalAlignment = Alignment.CenterVertically) {
        // User Info : user id and user name
        Column(
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
          Text(
              text = userId,
              fontWeight = FontWeight.Bold,
              color = MaterialTheme.colorScheme.onBackground,
              modifier = Modifier.testTag("UserId"))
          Text(
              text = userName,
              fontWeight = FontWeight.Bold,
              color = MaterialTheme.colorScheme.onBackground,
              modifier = Modifier.testTag("UserName"))
        }

        // Profile Picture
        ProfilePicture(profilePictureUrl)

        // Number of days
...
