...
    <string name="cancel_text">Cancel</string>
    <string name="unknown_text">unknown</string>
    <string name="my_friends_text">My Friends</string>
    <string name="my_stats_text">My Stats</string>
    <string name="completed_exercise_count_text">Number of exercises achieved :</string>
    <string name="completed_quest_count_text">Number of quests achieved :</string>
    <string name="easy_exercises_text">Easy</string>
    <string name="medium_exercises_text">Medium</string>
    <string name="hard_exercises_text">Hard</string>
    <string name="daily_quests_text">Daily</string>
    <string name="weekly_quests_text">Weekly</string>
    <string name="graphs_and_stats_text">Graphs and Stats</string>
    <string name="user_not_found_text">User Not Found</string>
    <string name="camera_permission_denied_text">Camera permission denied</string>

    <string name="confirm_changes_title">Confirm Changes</string>
    <string name="confirm_changes_message">Are you sure you want to save these changes?</string>
...
