...
      // Align the help button to the right
      if (buttons.isEmpty()) {
        Spacer(modifier = Modifier.weight(1f))
      }

      if (helpText != null) {
        HelpButton(helpText)
      }
    }

    SeparatorLine()
  }
}
...
        shape = RoundedCornerShape(12.dp),
        color = MaterialTheme.colorScheme.background,
        modifier =
            Modifier.border(3.dp, MaterialTheme.colorScheme.outline, RoundedCornerShape(12.dp))
                .testTag("HelpPopup")) {
          Column(
              modifier = Modifier.padding(16.dp).fillMaxWidth().testTag("HelpPopupContent"),
              horizontalAlignment = Alignment.CenterHorizontally) {
                // Title
                Text(
                    text =
                        buildAnnotatedString {
                          withStyle(style = SpanStyle(fontWeight = FontWeight.Bold)) {
...
